Changelog
=========

1.0 (xx.xx.xxxx)
~~~~~~~~~~~~~~~~

 * Added StreamField, a model field for freeform page content
 * Added Wagtail API, a module for creating a RESTful API for your content
 * MySQL support
 * Javascript includes in the admin backend have been moved to the HTML header, to accommodate form widgets that render inline scripts that depend on libraries such as jQuery
 * Improvements to the layout of the admin menu footer.
 * Menu items of custom apps are now highlighted when being used (Josh Barr)
 * Added thousands separator for counters on dashboard
 * Added contextual links to admin notification messages
 * When copying pages, it is now possible to specify a place to copy to (Timo Rieber)
 * FieldPanel now accepts an optional 'widget' parameter to override the field's default form widget (Alejandro Giacometti)
 * Dropped Django 1.6 support
 * Dropped Python 2.6 and 3.2 support
 * Dropped Elasticsearch 0.90.x support
 * Search view accepts "page" GET parameter in line with pagination
 * Reversing `django.contrib.auth.admin.login` will no longer lead to Wagtails login view (making it easier to have front end views)
 * Removed dependency on `LOGIN_URL` and `LOGIN_REDIRECT_URL` settings
 * Password reset view names namespaced to wagtailadmin
 * Removed the need to add permission check on admin views (now automated)
 * Added cache-control headers to all admin views
 * Page model fields without a FieldPanel are no longer displayed in the form
 * No longer need to specify the base model on InlinePanel definitions
 * The project template Vagrantfile now listens on port 8000
 * The external link chooser in rich text areas now accepts URLs of the form '/some/local/path', to allow linking to non-Wagtail-controlled URLs within the local site (Eric Drechsel)
 * SCSS files in wagtailadmin now use absolute imports, to permit overriding by user stylesheets (Martin Sanders)
 * Bare text entered in rich text areas is now automatically wrapped in a paragraph element